@@ -1,5 +1,7 @@
 {{$NEXT}}
     - Use Dist::Zilla
+    - Fix Perl 6 tablet hyperlink link and some other stuff pointed out
+      by Herbert Breunung
 
 0.45 Mon Aug 17 17:12:06 GMT 2009
     - Added perlobjintro and perlreintro
